--- a/Divar/appsettings.json
+++ b/Divar/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DivarConnection": "Server=.; Initial Catalog=OldDivar; Integrated Security=True; encrypt=False"
+  }
+
 }
