--- a/Divar/appsettings.json
+++ b/Divar/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DivarConnection": "Server=.; Initial Catalog=Divar2; Integrated Security=True; encrypt=False"
+    "DivarConnection": "Server=.; Initial Catalog=Divar; Integrated Security=True; encrypt=False"
   }
 
 }
