ef admin to  ado admin

--- a/Divar/requirements.txt
+++ b/Divar/requirements.txt
@@ -19,4 +19,70 @@ BEGIN
     VALUES (@Body, @CreatedDate)
 END
 
-تعمیر دسته بندی
+______________________________________________________________________________________________________________
+______________________________________________________________________________________________________________
+
+
+-- Stored Procedure برای گرفتن لیست کاربران
+CREATE PROCEDURE GetUsers
+AS
+BEGIN
+    SELECT * FROM AspNetUsers;
+END
+GO
+
+-- Stored Procedure برای گرفتن لیست آگهی‌ها
+CREATE PROCEDURE GetAdvertisements
+AS
+BEGIN
+    SELECT 
+        a.Id,
+        a.Title,
+        a.Content,
+        a.ImageUrl,
+        a.Price,
+        a.CreatedDate,
+        a.Category,
+        a.CustomUserId,
+        a.MobileBrand,
+        a.SimCardsNumber,
+        a.HomeSize,
+        a.HomeAddress,
+        a.BookAuthor,
+        a.CarBrand, -- افزودن ستون CarBrand
+        a.GearboxType, -- افزودن ستون GearboxType
+        u.FirstName AS UserFirstName,
+        u.LastName AS UserLastName
+    FROM 
+        Advertisements a
+    LEFT JOIN 
+        AspNetUsers u ON a.CustomUserId = u.Id;
+END
+GO
+
+-- Stored Procedure برای گرفتن لیست کامنت‌ها
+CREATE PROCEDURE GetComments
+AS
+BEGIN
+    SELECT * FROM Comments;
+END
+GO
+
+-- Stored Procedure برای گرفتن کاربر بر اساس شناسه
+CREATE PROCEDURE GetUserById
+    @Id NVARCHAR(450)
+AS
+BEGIN
+    SELECT * FROM AspNetUsers WHERE Id = @Id;
+END
+GO
+
+-- Stored Procedure برای حذف کاربر و آگهی‌های مربوط به آن
+CREATE PROCEDURE DeleteUserAndAdvertisements
+    @Id NVARCHAR(450)
+AS
+BEGIN
+    DELETE FROM Advertisements WHERE CustomUserId = @Id;
+    DELETE FROM AspNetUsers WHERE Id = @Id;
+END
+GO
